--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -12,17 +12,19 @@ spec:
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
-  template: |
-    outputs: scaler: {
-    	apiVersion: "core.oam.dev/v1alpha2"
-    	kind:       "ManualScalerTrait"
-    	spec: {
-    		replicaCount: parameter.replicas
-    	}
-    }
-    parameter: {
-    	//+short=r
-    	//+usage=Replicas of the workload
-    	replicas: *1 | int
-    }
-    
+  schematic:
+    cue:
+      template: |
+        outputs: scaler: {
+        	apiVersion: "core.oam.dev/v1alpha2"
+        	kind:       "ManualScalerTrait"
+        	spec: {
+        		replicaCount: parameter.replicas
+        	}
+        }
+        parameter: {
+        	//+short=r
+        	//+usage=Replicas of the workload
+        	replicas: *1 | int
+        }
+        
