--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_workloaddefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_workloaddefinitions.yaml
@@ -81,6 +81,19 @@ spec:
             revisionLabel:
               description: RevisionLabel indicates which label for underlying resources(e.g. pods) of this workload can be used by trait to create resource selectors(e.g. label selector for pods).
               type: string
+            schematic:
+              description: Schematic defines the data format and template of the encapsulation of the workload
+              properties:
+                cue:
+                  description: CUE defines the encapsulation in CUE format
+                  properties:
+                    template:
+                      description: Template defines the abstraction template data of the capability, it will replace the old CUE template in extension field. Template is a required field if CUE is defined in Capability Definition.
+                      type: string
+                  required:
+                  - template
+                  type: object
+              type: object
             status:
               description: Status defines the custom health policy and status message for workload
               properties:
@@ -93,9 +106,6 @@ spec:
               type: object
             template:
               description: Template defines the abstraction template data of the workload, it will replace the old template in extension field. the data format depends on templateType, by default it's CUE
-              type: string
-            templateType:
-              description: TemplateType defines the data format of the template, by default it's CUE format Terraform HCL, Helm Chart will also be candidates in the near future.
               type: string
           required:
           - definitionRef
