align workload/trait definition schema with v0.2.2 spec

--- a/hack/vela-templates/definitions/manualscale.yaml
+++ b/hack/vela-templates/definitions/manualscale.yaml
@@ -12,4 +12,6 @@ spec:
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
-  template: |
+  schematic:
+    cue:
+      template: |
