add webhook and kruise

--- a/charts/vela-core/crds/core.oam.dev_applicationdeployments.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationdeployments.yaml
@@ -127,6 +127,9 @@ spec:
                                   type: string
                                 description: Metadata (key-value pairs) for this webhook
                                 type: object
+                              method:
+                                description: Method the HTTP call method, default is POST
+                                type: string
                               name:
                                 description: Name of this webhook
                                 type: string
@@ -234,6 +237,9 @@ spec:
                             type: string
                           description: Metadata (key-value pairs) for this webhook
                           type: object
+                        method:
+                          description: Method the HTTP call method, default is POST
+                          type: string
                         name:
                           description: Name of this webhook
                           type: string
