--- a/docs/examples/rollout/app-target.yaml
+++ b/docs/examples/rollout/app-target.yaml
@@ -3,6 +3,7 @@ kind: Application
 metadata:
   name: test-rolling
   annotations:
+    "app.oam.dev/rolling-components": "metrics-provider"
     "app.oam.dev/rollout-template": "true"
 spec:
   components:
