fix issue #1140 delete image after e2e test

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -116,6 +116,10 @@ jobs:
       - name: Run e2e tests
         run: make e2e-test
 
+      - name: Cleanup image
+        if: ${{ always() }}
+        run: make image-cleanup
+
   staticcheck:
     runs-on: ubuntu-20.04
 
