--- a/docs/examples/rollout/app-deploy-finish.yaml
+++ b/docs/examples/rollout/app-deploy-finish.yaml
@@ -4,8 +4,8 @@ metadata:
   name: rolling-test
 spec:
   # application (revision) reference
-  targetApplicationName: test-rolling-v2
-  sourceApplicationName: test-rolling-v1
+  targetAppRevisionName: test-rolling-v2
+  sourceAppRevisionName: test-rolling-v1
   # HPA reference (optional)
   componentList:
     - metrics-provider
@@ -13,6 +13,5 @@ spec:
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
       - replicas: 10%
-      - replicas: 2
-      - replicas: 2
-    batchPartition: 2
+      - replicas: 20%
+      - replicas: 70%
