fix e2e test bug

--- a/docs/examples/rollout/app-deploy-finish.yaml
+++ b/docs/examples/rollout/app-deploy-finish.yaml
@@ -13,5 +13,5 @@ spec:
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
       - replicas: 10%
-      - replicas: 20%
-      - replicas: 70%
+      - replicas: 2
+      - replicas: 2
