--- a/docs/examples/rollout/app-deploy-pause.yaml
+++ b/docs/examples/rollout/app-deploy-pause.yaml
@@ -1,11 +1,11 @@
 apiVersion: core.oam.dev/v1alpha2
-kind: ApplicationDeployment
+kind: AppRollout
 metadata:
   name: rolling-test
 spec:
   # application (revision) reference
-  targetApplicationName: test-rolling-v2
-  sourceApplicationName: test-rolling-v1
+  targetAppRevisionName: test-rolling-v2
+  sourceAppRevisionName: test-rolling-v1
   # HPA reference (optional)
   componentList:
     - metrics-provider
