--- a/docs/examples/rollout/app-deploy-revert.yaml
+++ b/docs/examples/rollout/app-deploy-revert.yaml
@@ -1,18 +1,17 @@
 apiVersion: core.oam.dev/v1alpha2
-kind: ApplicationDeployment
+kind: AppRollout
 metadata:
-  name: rolling-e2e-test
+  name: rolling-test
 spec:
   # application (revision) reference
-  targetApplicationName: test-e2e-rolling-v2
-  sourceApplicationName: test-e2e-rolling-v1
+  targetAppRevisionName: test-rolling-v3
+  sourceAppRevisionName: test-rolling-v2
   # HPA reference (optional)
   componentList:
     - metrics-provider
   rolloutPlan:
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
-      - replicas: 10%
-      - replicas: 2
-      - replicas: 2
-    batchPartition: 2
+      - replicas: 20%
+      - replicas: 30%
+      - replicas: 50%
