--- a/docs/examples/rollout/app-target-done.yaml
+++ b/docs/examples/rollout/app-target-done.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: Application
 metadata:
-  name: test-e2e-rolling
+  name: test-rolling
 spec:
   components:
     - name: metrics-provider
@@ -10,6 +10,6 @@ spec:
         cmd:
           - ./podinfo
           - stress-cpu=1
-        image: stefanprodan/podinfo:4.0.6
+        image: stefanprodan/podinfo:5.0.2
         port: 8080
         updateStrategyType: InPlaceIfPossible
