--- a/test/e2e-test/testdata/rollout/cloneset/app-rollout.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-rollout.yaml
@@ -1,11 +1,11 @@
 apiVersion: core.oam.dev/v1alpha2
-kind: ApplicationDeployment
+kind: AppRollout
 metadata:
   name: rolling-e2e-test
 spec:
   # application (revision) reference
-  targetApplicationName: test-e2e-rolling-v2
-  sourceApplicationName: test-e2e-rolling-v1
+  targetAppRevisionName: test-e2e-rolling-v2
+  sourceAppRevisionName: test-e2e-rolling-v1
   # HPA reference (optional)
   componentList:
     - metrics-provider
@@ -15,4 +15,4 @@ spec:
       - replicas: 10%
       - replicas: 2
       - replicas: 2
-    batchPartition: 1
+    batchPartition: 2
