the vela-core image use 'CMD' instead of 'ENTRYPOINT'

--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -104,7 +104,8 @@ spec:
         - name: {{ .Release.Name }}
           securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
-          args:
+          command:
+            - "/manager"
             - "--metrics-addr=:8080"
             - "--enable-leader-election"
             {{ if .Values.admissionWebhooks.enabled }}
