--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
@@ -95,7 +95,6 @@ spec:
               type: string
           type: object
         status:
-          description: CapabilityStatus is the status of WorkloadDefinition and TraitDefinition
           properties:
             conditions:
               description: Conditions of the resource.
@@ -125,6 +124,11 @@ spec:
                 - type
                 type: object
               type: array
+            configMapRef:
+              description: ConfigMapRef refer to ConfigMap contain OpenAPI V3 JSON schema
+              type: string
+          required:
+          - configMapRef
           type: object
       type: object
   version: v1alpha2
