--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_componentdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_componentdefinitions.yaml
@@ -10,11 +10,16 @@ metadata:
 spec:
   group: core.oam.dev
   names:
+    categories:
+    - crossplane
+    - oam
     kind: ComponentDefinition
     listKind: ComponentDefinitionList
     plural: componentdefinitions
     singular: componentdefinition
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: ComponentDefinition is the Schema for the componentdefinitions API
@@ -102,6 +107,8 @@ spec:
                   description: Type ref to a WorkloadDefinition via name
                   type: string
               type: object
+          required:
+          - workload
           type: object
         status:
           description: ComponentDefinitionStatus is the status of ComponentDefinition
@@ -135,10 +142,8 @@ spec:
                 type: object
               type: array
             configMapRef:
-              description: ConfigMapRef refer to ConfigMap contain OpenAPI V3 JSON schema
+              description: ConfigMapRef refer to a ConfigMap which contains OpenAPI V3 JSON schema of Component parameters.
               type: string
-          required:
-          - configMapRef
           type: object
       type: object
   version: v1alpha2
