--- a/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
@@ -96,6 +96,7 @@ spec:
                 type: string
             type: object
           status:
+            description: TraitDefinitionStatus is the status of TraitDefinition
             properties:
               conditions:
                 description: Conditions of the resource.
@@ -126,15 +127,14 @@ spec:
                   type: object
                 type: array
               configMapRef:
-                description: ConfigMapRef refer to ConfigMap contain OpenAPI V3 JSON schema
+                description: ConfigMapRef refer to a ConfigMap which contains OpenAPI V3 JSON schema of Component parameters.
                 type: string
-            required:
-            - configMapRef
             type: object
         type: object
     served: true
     storage: true
-    subresources: {}
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
