--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
@@ -22,7 +22,8 @@ spec:
     plural: traitdefinitions
     singular: traitdefinition
   scope: Namespaced
-  subresources: {}
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: A TraitDefinition registers a kind of Kubernetes custom resource as a valid OAM trait kind by referencing its CustomResourceDefinition. The CRD is used to validate the schema of the trait when it is embedded in an OAM ApplicationConfiguration.
@@ -95,6 +96,7 @@ spec:
               type: string
           type: object
         status:
+          description: TraitDefinitionStatus is the status of TraitDefinition
           properties:
             conditions:
               description: Conditions of the resource.
@@ -125,10 +127,8 @@ spec:
                 type: object
               type: array
             configMapRef:
-              description: ConfigMapRef refer to ConfigMap contain OpenAPI V3 JSON schema
+              description: ConfigMapRef refer to a ConfigMap which contains OpenAPI V3 JSON schema of Component parameters.
               type: string
-          required:
-          - configMapRef
           type: object
       type: object
   version: v1alpha2
