--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -372,6 +372,10 @@ spec:
               rollingState:
                 description: RollingState is the Rollout State
                 type: string
+              rolloutTargetSize:
+                description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                format: int32
+                type: integer
               services:
                 description: Services record the status of the application services
                 items:
