--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - release-*
-  workflow_dispatch: {}
+  workflow_dispatch: { }
   pull_request:
     branches:
       - master
@@ -59,7 +59,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pkg-
 
       - name: Install ginkgo
-        run:  |
+        run: |
           sudo apt-get install -y golang-ginkgo-dev
 
       - name: Setup Kind Cluster
@@ -124,7 +124,7 @@ jobs:
         run: make compatibility-testdata-cleanup
 
   e2e-tests:
-    runs-on: aliyun
+    runs-on: ubuntu-20.04
     needs: detect-noop
     if: needs.detect-noop.outputs.noop != 'true'
 
@@ -141,16 +141,17 @@ jobs:
         run: |
           go get -v -t -d ./...
 
+      - name: Install ginkgo
+        run: |
+          sudo apt-get install -y golang-ginkgo-dev
+
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
         with:
           version: ${{ env.KIND_VERSION }}
-          skipClusterCreation: true
 
       - name: Setup Kind Cluster
         run: |
-          kind delete cluster
-          kind create cluster
           kubectl version
           kubectl cluster-info
 
@@ -177,10 +178,6 @@ jobs:
 
       - name: Run e2e tests
         run: make e2e-test
-
-      - name: Cleanup image
-        if: ${{ always() }}
-        run: make image-cleanup
 
   staticcheck:
     runs-on: ubuntu-20.04
